<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/match_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundTip"
    android:orientation="vertical"
    tools:context=".ui.SplashActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_sup"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/mess_sup"
                android:textColor="@color/white"
                android:textSize="18sp"

                />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_margin="20dp"
                android:background="@color/CCCCCC" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title_sup_2"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_marginTop="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/img_sup"
                android:tint="@null"
                app:tint="@null" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/img_sup_2"
                android:tint="@null"
                app:tint="@null" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="9">

                <RelativeLayout
                    android:id="@+id/mLinearMonth"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="3"
                    android:background="@drawable/border_buy_click"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/txt1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_buy_1"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt1_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt1"
                        android:layout_marginTop="10dp"
                        android:text="Then"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt1_1"
                        android:layout_alignParentBottom="true"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="Tiền"
                            android:id="@+id/txtPriceMonth"
                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="/month"

                            android:textColor="@color/white" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/mLinearWeek"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="3"
                    android:background="@drawable/boder_buy_unclick"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txt2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title_buy_2"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt2_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt2"
                        android:layout_marginTop="10dp"
                        android:text="Then"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt2_2"
                        android:layout_alignParentBottom="true"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="Tiền"
                            android:id="@+id/txtPriceWeek"

                            android:textColor="@color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="/month"

                            android:textColor="@color/white" />
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/mLinearLifeTime"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_weight="3"
                    android:background="@drawable/boder_buy_unclick"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/txt3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:text="@string/title_buy_3"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt3"
                        android:text="@string/mess_buy_3"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt1_1"
                        android:layout_alignParentBottom="true"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="Tiền"
                            android:id="@+id/txtPricelifeTime"

                            android:textColor="@color/white"
                            android:textStyle="bold" />

                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="20sp"
                android:backgroundTint="@color/backGroundTip"
                android:gravity="center"
                android:outlineProvider="paddedBounds"
                android:shadowColor="@color/white"
                android:text="@string/start_free_trial"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:icon="@drawable/baseline_arrow_forward_24"
                app:iconGravity="end"
                app:strokeColor="@color/white"
                app:strokeWidth="1dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/payment_description"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:id="@+id/txtPolicy"
                android:layout_marginBottom="25sp"
                android:text="@string/privacy_policy"
                android:textColor="#4D7DC3" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>